src/test/deca/syntax/invalid/if_missing_cpar.deca

// Description :
// Instruction if avec parenthèse fermante manquante après la condition.
// On teste que la syntaxe exige : if '(' expr ')' '{' ... '}'.
//
// Resultats :
// Erreur syntaxique
// Regle : if_then_else -> IF '(' expr ')' '{' list_inst '}' (ELSE ...)*
//

{
    if (true {
        x = 1 ;
    }
}